# LvDReference

./: .gitignore  CMakeLists.txt  LvDLikelihoods  Makefile  RDPII_218_RDPII_218_posterior.tsv  RDPII_218_RDPII_218_times.tsv  README.md  RunSimulation  TidyTree  TreeHeights
src/: BranchLengthMCMC.cpp  DecomMCMC.cpp  DecomMCMC.h  LvDLikelihoods.cpp  RunSimulation.cpp  TestPartialLikelihoodTensor.cpp  TidyTree.cpp  TreeHeights.cpp
src/DecompositionTree/: PartialLikelihoodTensor.h  decompositionLikelihood.cpp  decompositionLikelihood.h  decompositionTree.cpp  decompositionTree.h
src/Phylib/: phylib.h
src/Phylib/global/: stdIncludes.h
src/Phylib/sequences/: makefile  phylip_seq.cpp  phylip_seq.h
src/Phylib/trees/: phylo.h  phylo_io.h  phylo_sim.h  phylo_util.h
src/Phylib/utilities/: optimisation.h  random.h  stopwatch.h
src/Reference/: PartialLikelihoodTensorReference.h
src/StandardLikelihood/: standardLikelihood.cpp  standardLikelihood.h
testdata/: RDPII_218.trees  RDPII_218_RDPII_218_posterior.tsv  RDPII_218_RDPII_218_times.tsv
